fix anchor targets falling behind fixed header when anchor clicked

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -412,3 +412,10 @@ div.pl-doc-entry{
 .prebid-mobile-notice {
     margin-top: 2em;
 }
+
+:target:before {
+  content: "";
+  display: block;
+  height: 60px;
+  margin: -60px 0 0;
+}
